login and css update

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 body{
-  background-color: #FFB347;
+  background-color: #404664;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
