--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -31,7 +31,7 @@
 .submitBtn {
     margin: 1vh 0;
     align-self: center;
-    background-color: #f8bc00;
+    background-color:#da7b08;
     border-radius: .25em;
     border: none;
     padding: 1vh 1vw;
